[tool.poetry]
name = "bsle"
version = "0.1.0"
description = "Byte Stream Learning Environment"
authors = ["Douglas Orr <douglas.orr99@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
pytest = "^5.4.2"
flake8 = "^3.8.2"
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
